nested BackendImpl inside Backend and generally cleaned up the lwjgl suit